--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>RITIK<br />
 						DATA ANALYST</h1>
-						<p>Data Analyst well versed in SQL, Python, Tableau, Power BI <a href="https:www.linkedin.com/in/ritikr925">@Ritik.</a><br />
+						<p>Data Analyst well versed in SQL, Python, Tableau, Power BI <a href="https://linkedin.com/in/ritikr925">@Ritik.</a><br />
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -39,7 +39,7 @@
 							<li class="active"><a href="index.html">PROJECTS</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https:www.linkedin.com/in/ritikr925" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://linkedin.com/in/ritikr925" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/RitikR176206" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
@@ -118,7 +118,7 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https:www.linkedin.com/in/ritikr925" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://linkedin.com/in/ritikr925" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/RitikR176206" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
