--- a/index.html
+++ b/index.html
@@ -79,6 +79,15 @@
 								</ul>
 
 								<header class="major">
+									<h2><a href="powerbi://api.powerbi.com/v1.0/myorg/Portolio">Power BI Projects <br /></a></h2>
+									<p>In this we'll see different Power BI Dashboards.</br></p>
+								</header>
+								<a href="powerbi://api.powerbi.com/v1.0/myorg/Portolio" class="image main"><img src="images\PBI4.jfif " alt="" /></a>
+								<ul class="actions special">
+									<li><a href="powerbi://api.powerbi.com/v1.0/myorg/Portolio" class="button large">OPEN PROJECT</a></li>
+								</ul>
+
+								<header class="major">
 									<h2><a href="https://public.tableau.com/app/profile/ritik.5304/vizzes">TABLEAU DASHBOARDS<br /></a></h2>
 									<p>Tableau Dashboards for projects on COVID 19, Financial Forecasting, and Fantasy Football</br></p>
 								</header>
