--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
 								</ul>
 
 								<header class="major">
-									<h2><a href="powerbi://api.powerbi.com/v1.0/myorg/Portolio">Power BI Projects <br /></a></h2>
+									<h2><a href="https:://api.powerbi.com/v1.0/myorg/Portolio">Power BI Projects <br /></a></h2>
 									<p>In this we'll see different Power BI Dashboards.</br></p>
 								</header>
-								<a href="powerbi://api.powerbi.com/v1.0/myorg/Portolio" class="image main"><img src="images/PBI4.png" alt="" /></a>
+								<a href="https:://api.powerbi.com/v1.0/myorg/Portolio" class="image main"><img src="images/PBI4.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="powerbi://api.powerbi.com/v1.0/myorg/Portolio" class="button large">OPEN PROJECT</a></li>
+									<li><a href="https:://api.powerbi.com/v1.0/myorg/Portolio" class="button large">OPEN PROJECT</a></li>
 								</ul>
 
 								<header class="major">
