--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									<p>In this project we take raw housing data and transform
 										it in SQL Server to make it more usable for analysis.</br></p>
 								</header>
-								<a href="https://github.com/RitikR176206/PortfolioProjects/blob/main/NashvilleHousingDataCleaning.sql" class="image main"><img src="images\Housings.jpg" alt="" /></a>
+								<a href="https://github.com/RitikR176206/PortfolioProjects/blob/main/NashvilleHousingDataCleaning.sql" class="image main"><img src="images/Housings.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/RitikR176206/PortfolioProjects/blob/main/NashvilleHousingDataCleaning.sql" class="button large">OPEN PROJECT</a></li>
 								</ul>
@@ -64,7 +64,7 @@
 									<h2><a href="https://github.com/RitikR176206/PortfolioProjects/blob/main/CovidDataExploration01.sql">COVID 19 Data Exploration<br /></a></h2>
 									<p>In this project we use SQL Server to explore global COVID-19 data.</br></p>
 								</header>
-								<a href="https://github.com/RitikR176206/PortfolioProjects/blob/main/CovidDataExploration01.sql" class="image main"><img src="images\virus.jpg" alt="" /></a>
+								<a href="https://github.com/RitikR176206/PortfolioProjects/blob/main/CovidDataExploration01.sql" class="image main"><img src="images/virus.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/RitikR176206/PortfolioProjects/blob/main/CovidDataExploration01.sql" class="button large">OPEN PROJECT</a></li>
 								</ul>
@@ -73,25 +73,35 @@
 									<h2><a href="https://github.com/RitikR176206/PortfolioProjects/blob/main/MovieIndustry.ipynb">Movie Correlation with Python<br /></a></h2>
 									<p>In this project we look at what variables effect the gross revenue from movies.</br></p>
 								</header>
-								<a href="https://github.com/RitikR176206/PortfolioProjects/blob/main/MovieIndustry.ipynb" class="image main"><img src="images\films.png" alt="" /></a>
+								<a href="https://github.com/RitikR176206/PortfolioProjects/blob/main/MovieIndustry.ipynb" class="image main"><img src="images/films.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/RitikR176206/PortfolioProjects/blob/main/MovieIndustry.ipynb" class="button large">OPEN PROJECT</a></li>
 								</ul>
 
+								<!-- Power BI Dashboard Section -->
 								<header class="major">
-									<h2><a href="https://app.powerbi.com/groups/a5e83be3-1548-40cc-b001-be72009ccd71/list?experience=power-bi">Power BI Projects <br /></a></h2>
-									<p>In this we'll see different Power BI Dashboards.</br></p>
+									<h2><a href="#">Power BI Dashboard: Financial Performance (2022-2024)<br /></a></h2>
+									<p>Interactive dashboard showcasing financial performance metrics, trends, and insights.</br></p>
 								</header>
-								<a href="https://app.powerbi.com/groups/a5e83be3-1548-40cc-b001-be72009ccd71/list?experience=power-bi" class="image main"><img src="images/PBI4.png" alt="" /></a>
+								<div class="dashboard-container">
+									<iframe 
+										title="Financial Performance Dashboard 2022-2024" 
+										width="100%" 
+										height="600" 
+										src="https://app.powerbi.com/reportEmbed?reportId=58b4ae4f-5f2c-41d8-b31d-d5b5c10be53a&autoAuth=true&ctid=f6cbf58b-5e45-4abb-80df-09f775880ee6" 
+										frameborder="0" 
+										allowFullScreen="true">
+									</iframe>
+								</div>
 								<ul class="actions special">
-									<li><a href="https://app.powerbi.com/groups/a5e83be3-1548-40cc-b001-be72009ccd71/list?experience=power-bi" class="button large">OPEN PROJECT</a></li>
+									<li><a href="https://app.powerbi.com/groups/a5e83be3-1548-40cc-b001-be72009ccd71/list?experience=power-bi" class="button large">VIEW ALL DASHBOARDS</a></li>
 								</ul>
 
 								<header class="major">
 									<h2><a href="https://public.tableau.com/app/profile/ritik.5304/vizzes">TABLEAU DASHBOARDS<br /></a></h2>
 									<p>Tableau Dashboards for projects on COVID 19, Financial Forecasting, and Fantasy Football</br></p>
 								</header>
-								<a href="https://public.tableau.com/app/profile/ritik.5304/vizzes" class="image main"><img src="images\tableau.jpg" alt="" /></a>
+								<a href="https://public.tableau.com/app/profile/ritik.5304/vizzes" class="image main"><img src="images/tableau.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://public.tableau.com/app/profile/ritik.5304/vizzes" class="button large">OPEN PROJECT</a></li>
 								</ul>
