--- a/index.html
+++ b/index.html
@@ -84,14 +84,22 @@
 									<p>Interactive dashboard showcasing financial performance metrics, trends, and insights.</br></p>
 								</header>
 								<div class="dashboard-container">
-									<iframe 
-										title="Financial Performance Dashboard 2022-2024" 
-										width="100%" 
-										height="600" 
-										src="https://app.powerbi.com/reportEmbed?reportId=58b4ae4f-5f2c-41d8-b31d-d5b5c10be53a&autoAuth=true&ctid=f6cbf58b-5e45-4abb-80df-09f775880ee6" 
-										frameborder="0" 
-										allowFullScreen="true">
-									</iframe>
+									<!-- Power BI Dashboard Section -->
+								<header class="major">
+								    <h2><a href="#">Power BI Dashboard: Financial Performance (2022-2024)<br /></a></h2>
+								    <p>Interactive dashboard showcasing financial performance metrics, trends, and insights.</br></p>
+								</header>
+								<div class="dashboard-container">
+								    <iframe 
+								        title="Financial Performance Dashboard 2022-2024" 
+								        src="https://app.powerbi.com/reportEmbed?reportId=58b4ae4f-5f2c-41d8-b31d-d5b5c10be53a&autoAuth=true&ctid=f6cbf58b-5e45-4abb-80df-09f775880ee6&pageName=ReportSection&zoomMode=fitToWidth" 
+								        frameborder="0" 
+								        allowFullScreen="true">
+								    </iframe>
+								</div>
+								<ul class="actions special">
+								    <li><a href="https://app.powerbi.com/groups/a5e83be3-1548-40cc-b001-be72009ccd71/list?experience=power-bi" class="button large">VIEW ALL DASHBOARDS</a></li>
+								</ul>
 								</div>
 								<ul class="actions special">
 									<li><a href="https://app.powerbi.com/groups/a5e83be3-1548-40cc-b001-be72009ccd71/list?experience=power-bi" class="button large">VIEW ALL DASHBOARDS</a></li>
