--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+	<style>
+		    .dashboard-container {
+		    position: relative;
+		    overflow: hidden;
+		    width: 100%;
+		    padding-top: 56.25%; /* 16:9 Aspect Ratio (adjust as needed) */
+		}
+		
+		.dashboard-container iframe {
+		    position: absolute;
+		    top: 0;
+		    left: 0;
+		    width: 100%;
+		    height: 100%;
+		    border: 0;
+		}
+	</style>
 	<head>
 		<title>RITIK DATA ANALYST</title>
 		<meta charset="utf-8" />
