--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					<div id="intro">
 						<h1>RITIK<br />
 						DATA ANALYST</h1>
-						<p>Data Analyst well versed in SQL, Python, Tableau, Power BI <a href="https://linkedin.com/in/ritikr925">@Ritik.</a><br />
+						<p>Results-driven Data Analyst with 3+ years of experience delivering actionable insights using Power BI, SQL, and Python. Proven success in building dynamic dashboards, automating ETL pipelines, and conducting in-depth analysis to drive business growth—boosted sales by 15% and reduced reporting time by 30%. Adept at translating complex data into clear business value, with hands-on experience at Capgemini and a strong foundation in data storytelling, stakeholder collaboration, and performance optimization.<a href="https://linkedin.com/in/ritikr925">@Ritik.</a><br />
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
